# hf-hub-ctranslate2

./: .gitignore  .pre-commit-config.yaml  README.html  README.md  genindex.html  hf_hub_ctranslate2.html  hf_hub_ctranslate2.util.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements_dev.txt  search.html  searchindex.js  setup.py  tox.ini
.github/workflows/: codeql-analysis.yml  test_release.yml
_autosummary/: hf_hub_ctranslate2.ct2_sentence_transformers.html  hf_hub_ctranslate2.html  hf_hub_ctranslate2.translate.html  hf_hub_ctranslate2.util.html  hf_hub_ctranslate2.util.utils.html
_sources/: README.md.txt  hf_hub_ctranslate2.rst.txt  hf_hub_ctranslate2.util.rst.txt  modules.rst.txt
_sources/_autosummary/: hf_hub_ctranslate2.ct2_sentence_transformers.rst.txt  hf_hub_ctranslate2.rst.txt  hf_hub_ctranslate2.translate.rst.txt  hf_hub_ctranslate2.util.rst.txt  hf_hub_ctranslate2.util.utils.rst.txt
_static/: documentation_options.js
conversion_utils/: convert.py  convert_general.sh  convert_onmt.py  special.py
docs/: Makefile  conf.py  index.rst  make.bat
hf_hub_ctranslate2/: __init__.py  ct2_sentence_transformers.py  translate.py
hf_hub_ctranslate2/_private/: __init__.py  utils.py
hf_hub_ctranslate2/util/: __init__.py  utils.py
tests/: test_ct2_sentence_transformers.py  test_translate.py  test_version.py
