[tool.poetry]
name = "hf_hub_ctranslate2"
version = "2.13.0"
description = "Connecting Transfromers on HuggingfaceHub with Ctranslate2."
authors = ["michaelfeil <mail at michaelfeil.eu>"]
license = "MIT"
readme = "README.md"
packages = [{include = "hf_hub_ctranslate2"}]

[tool.poetry.dependencies]
python = ">=3.7,<3.13"
# basics, pin numpy <2 for onnx
ctranslate2 = ">=3.16.0"
transformers = ">=4.28.0"
huggingface-hub = "*"
sentence_transformers = {version="==2.2.2", optional=true}

[tool.poetry.group.test.dependencies]
pytest= "6.2.5"
pytest-ordering = "0.6"
Sphinx = "~4.3.2"
sphinx-rtd-theme = "1.0.0"
coverage = "6.2"
flake8 = "*"
pre-commit = "*"
myst-parser[sphinx] = "2.0.0"
mkdocs = "*"
sentencepiece = "*"
typing_extensions = "*"


[tool.poetry.extras]
sentence_transformers=[sentence_transformers]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
